--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,22 @@
 spring.application.name=WebCinema
+
 # Data properties
 spring.datasource.url=jdbc:mysql://localhost:3306/webcinema?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # Hibernate setting to automatically update database schema
 spring.jpa.hibernate.ddl-auto=update
+
 # Hibernate dialect for MySQL (helps Hibernate generate optimized SQL for MySQL)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Environment
 spring.profiles.active=dev
+
+#Set timezone for database
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 
 # JWT properties
 # Secret key
@@ -37,3 +43,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Allow Bean Override
 spring.main.allow-bean-definition-overriding=true
+
+spring.jpa.open-in-view=true
