--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 application.jwt.secret=TmfDtCBUcuG6p24gUXVhbmcgSMOgIC0gNC8xMS8yMDA0IC0gSEQ=
 
 # JWT expiration time
-application.jwt.expiration=86
+application.jwt.expiration=86400000
 
 # Refresh token expiration time
 application.jwt.refresh-token.expiration=172800000
