fix: modify refresh and access token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 # Hibernate dialect for MySQL (helps Hibernate generate optimized SQL for MySQL)
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Environment
 spring.profiles.active=dev
@@ -23,7 +23,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 application.jwt.secret=TmfDtCBUcuG6p24gUXVhbmcgSMOgIC0gNC8xMS8yMDA0IC0gSEQ=
 
 # JWT expiration time
-application.jwt.expiration=86400000
+application.jwt.expiration=120000
+#86400000
 
 # Refresh token expiration time
 application.jwt.refresh-token.expiration=172800000
