feat: add properties and data in data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${dev.mail.username}
 spring.mail.password=${dev.mail.password}
+
 # Enable SMTP authentication (required if the server requires login)
 spring.mail.properties.mail.smtp.auth=true
 # Enable STARTTLS to secure the connection (recommended for sending emails)
@@ -45,3 +46,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.open-in-view=true
+
+# Initialized database
+spring.jpa.defer-datasource-initialization=true
+# Run only when create new database
+spring.sql.init.mode=never
+spring.sql.init.data-locations=classpath:/database/data.sql
