fix: modify data and sql mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,5 +50,5 @@ spring.jpa.open-in-view=true
 # Initialized database
 spring.jpa.defer-datasource-initialization=true
 # Run only when create new database
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:/database/data.sql
