--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=WebCinema
 
 # Data properties
-spring.datasource.url=jdbc:mysql://localhost:3306/webcinema?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://${server.db.endpoint}:${server.db.port}/${server.db.name}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${server.db.username}
+spring.datasource.password=${server.db.password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate setting to automatically update database schema
@@ -11,6 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Hibernate dialect for MySQL (helps Hibernate generate optimized SQL for MySQL)
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.messages.basename=i18n/messages
 
 # Environment
 spring.profiles.active=dev
