fix: modify room, movie service, exp handler and data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=WebCinema
 
 # Data properties
-spring.datasource.url=jdbc:mysql://${server.db.endpoint}:${server.db.port}/${server.db.name}?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${server.db.endpoint}:${server.db.port}/${server.db.name}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=${server.db.username}
 spring.datasource.password=${server.db.password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
