--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=WebCinema
 
+server.port=8080
+server.ssl.enabled=false
+
 # Data properties
-spring.datasource.url=jdbc:mysql://${server.db.endpoint}:${server.db.port}/${server.db.name}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${server.db.endpoint}:${server.db.port}/${server.db.name}?useSSL=false&serverTimezone=UTC
 spring.datasource.username=${server.db.username}
 spring.datasource.password=${server.db.password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -52,5 +55,5 @@ spring.jpa.open-in-view=true
 # Initialized database
 spring.jpa.defer-datasource-initialization=true
 # Run only when create new database
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.data-locations=classpath:/database/data.sql
