--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>7.0.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -136,6 +142,14 @@
                         <artifactId>lombok</artifactId>
                     </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
