--- a/pom.xml
+++ b/pom.xml
@@ -138,18 +138,10 @@
                 <configuration>
                     <excludes>
                     <exclude>
-                        <groupId>org.projectlombok</groupId>
+                        <groupId>org.projectors</groupId>
                         <artifactId>lombok</artifactId>
                     </exclude>
                     </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
